--- a/app/templates/mainPart/input_exam.html
+++ b/app/templates/mainPart/input_exam.html
@@ -9,10 +9,12 @@
                     <h2>Input Exam Details</h2>
                     <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
                     <li class="submenu">
-                        <strong>  Purpose:</strong>
+                        <strong>  Functionality:</strong>
                         <ul>
-                            <li>Upload merged lecturer schedule files</li>
-                            <li>Access and review combined lecturer timetables</li>
+                            <li>Create new exam sessions</li>
+                            <li>Modify or remove existing exam sessions</li>
+                            <li>Export exam schedules to PDF</li>
+                            <li>Browse all current exam sessions</li>
                         </ul>
                     </li>
                 </div>
