--- a/app/templates/mainPart/generate_schedule.html
+++ b/app/templates/mainPart/generate_schedule.html
@@ -9,10 +9,12 @@
                     <h2>Generate Exam Schedule</h2>
                     <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
                     <li class="submenu">
-                        <strong>  Purpose:</strong>
+                        <strong>  Functionality:</strong>
                         <ul>
-                            <li>Upload merged lecturer schedule files</li>
-                            <li>Access and review combined lecturer timetables</li>
+                            <li>Automatically assign examiners based on availability</li>
+                            <li>Review and manage generated exam timetables</li>
+                            <li>Distribute schedules via email</li>
+                            <li>Download schedule in PDF format</li>
                         </ul>
                     </li>
                 </div>
