--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -2,7 +2,7 @@
 {% extends "mainPart/base.html" %}
 {% block title %}Upload File{% endblock %}
 {% block content %}
-    <div class="menu-grid"> <!-- style="display: grid; grid-template-columns: repeat(2, 1fr);"> -->
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(4, 1fr);">
         <br>
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
