--- a/app/templates/mainPart/assign_lecturer.html
+++ b/app/templates/mainPart/assign_lecturer.html
@@ -5,7 +5,7 @@
     <div class="menu-grid">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
-            <h2>Settings</h2>
+            <h2>Assign Lecturer</h2>
             <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
             <li class="submenu">
                 <strong>  Account Controls: </strong>
