--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -193,8 +193,13 @@ form {
 }
 
 input {
-    width: 25vh;
+    width: 30%;
     padding: 10px;
-    margin: 1% 0;
+    margin: 1% auto;
     box-sizing: border-box;
+}
+
+.input_frame {
+    display: flex;
+    justify-self: center;
 }
