--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -6,7 +6,9 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <h2>Upload File</h2>
-            <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+            <div class="input-frame">
+                <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+            </div>
             <!--
             <li class="submenu">
                 <strong>  Purpose:</strong>
