--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -202,4 +202,7 @@ input {
 .input-frame {
     display: flex;
     justify-content: center;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
