--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -207,4 +207,5 @@ input {
     background-color: #fff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     border: 1px solid #ccc;
+    font-size: medium;
 }
