--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -7,7 +7,9 @@
         <div class="menu-section">
             <h2>Upload File</h2>
             <div class="input-frame">
+                <label>Upload Masterfile</label>
                 <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+                <button type="submit">Upload and Process</button>
             </div>
 
             <!--
