--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -6,13 +6,14 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <h2>Upload File</h2>
-            <div class="input-frame">
+            <div class="big-frame">
                 <label>Upload Masterfile</label>
-                <br>
-                <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
-                <br>
+                <div class="small-frame">
+                    <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+                </div>
                 <button type="submit">Upload and Process</button>
             </div>
+
 
             <!--
             <li class="submenu">
