--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -13,9 +13,9 @@
                 </div>
                 <button type="submit">Upload and Process</button>
             </div>
+        </div>
 
-
-            <!--
+        <div class="menu-section">
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>
@@ -23,7 +23,6 @@
                     <li>Access and review combined lecturer timetables</li>
                 </ul>
             </li>
-            -->
         </div>
     </div>
 {% endblock %}
