--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -9,7 +9,7 @@
             <div class="big-frame">
                 <label>Upload Masterfile</label>
                 <div class="small-frame">
-                    <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls" required>
                 </div>
                 <button type="submit">Upload and Process</button>
             </div>
@@ -17,7 +17,7 @@
 
         <div class="menu-section">
             <li class="submenu">
-                <strong>  Purpose:</strong>
+                <strong>Purpose:</strong>
                 <ul>
                     <li>Upload merged lecturer schedule files</li>
                     <li>Access and review combined lecturer timetables</li>
