--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -86,11 +86,12 @@ form {
 
 
 /* Title with the layout of each frame */
-.menu-section h2 {
+.menu-section h2 h3{
     color: #2c3e50;
     border-bottom: 2px solid #3498db;
     padding-bottom: 10px;
     margin-top: 0;
+    padding: 10px;
 }
 
 
