--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -16,6 +16,7 @@
         </div>
 
         <div class="menu-section">
+            <h3>Table Record</h3>
             <li class="submenu">
                 <strong>Purpose:</strong>
                 <ul>
