--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -20,7 +20,7 @@
         <!-- Row 1 Second Fesatures to input exam details--> 
         <div class="menu-section">
             <!-- <h2>Input Exam Details</h2>  -->
-            <a href="{{ url_for('add_new_exam')}}" style="text-decoration: none;"><h2>Input Exam Details</h2></a>
+            <a href="{{ url_for('add_new_exam')}}" style="text-decoration: none;"><h2>Add New Exam Sessions</h2></a>
             <li class="submenu">
                 <strong>  Functionality:</strong>
                 <ul>
