--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -35,7 +35,7 @@
 
             <a href="{{ url_for('manage_exam')}}" 
                class="tab-link {% if active_tab == 'manageExam' %}active{% endif %}" 
-               data-tab="manageExam">Input Exam Details</a>
+               data-tab="manageExam">Manage Exam Sessions</a>
 
             <a href="{{ url_for('auto_generate')}}" 
                class="tab-link {% if active_tab == 'autoGenerate' %}active{% endif %}" 
