--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -27,3 +27,11 @@
         </div>
     </div>
 {% endblock %}
+
+<!-- 
+ upload file have 2
+ 1. masterfile, all lecturer timetblae
+ 2. the generete timetable provided from row A to R based on each column heading
+
+
+-->
