--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -37,7 +37,7 @@
                class="tab-link {% if active_tab == 'autoGenerate' %}active{% endif %}" 
                data-tab="autoGenerate">Generate Exam Schedule</a>
 
-            <a href="{{ url_for('assign_lecturer')}}" 
+            <a href="{{ url_for('manage_lecturer')}}" 
                class="tab-link {% if active_tab == 'assign' %}active{% endif %}" 
                data-tab="assign">Assign Lecturer</a>
         </div>
