--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -38,8 +38,8 @@
                data-tab="autoGenerate">Generate Exam Schedule</a>
 
             <a href="{{ url_for('manage_lecturer')}}" 
-               class="tab-link {% if active_tab == 'assign' %}active{% endif %}" 
-               data-tab="assign">Assign Lecturer</a>
+               class="tab-link {% if active_tab == 'manage' %}active{% endif %}" 
+               data-tab="manage">Assign Lecturer</a>
         </div>
         <br>
 
