--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -9,11 +9,11 @@
         <div class="tab-nav">
             <a href="{{ url_for('home_page')}}" 
                class="tab-link {% if active_tab == 'lecturerTimetable' %}active{% endif %}" 
-               data-tab="home">Lecturers Timetable</a>
+               data-tab="lecturerTimetable">Lecturers Timetable</a>
 
             <a href="{{ url_for('home_page')}}" 
                class="tab-link {% if active_tab == 'examDetails' %}active{% endif %}" 
-               data-tab="upload">Exam Details</a>
+               data-tab="examDetails">Exam Details</a>
         </div>
         <br>
 
