--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -35,7 +35,7 @@
         <!-- Row 2 Second on managing lecturers-->
         <div class="menu-section">
         <!-- <h2>Settings</h2> -->
-            <a href="{{ url_for('assign_lecturer')}}" style="text-decoration: none;"><h2>Assign Lecturer</h2></a>
+            <a href="{{ url_for('manage_lecturer')}}" style="text-decoration: none;"><h2>Assign Lecturer</h2></a>
             <li class="submenu">
                 <strong>  Account Controls: </strong>
                 <ul>
