--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -1,25 +1,24 @@
 body {
-    margin: 0;
-    min-height: 100vh;
-    display: grid;
+    width: 100%;
     place-items: center;
     background-color: #f5f5f5;
 }
 
 form {
-    width: 60%;
+    width: 90%;
     padding: 50px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
+    /* border: 2px solid #ccc; */
+    /* border-radius: 10px; */
     background: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+    margin: 2%;
 }
 
 /* Heading frame layout */
 .header-container {
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 95%;
 }
 
 /* INTI logo layout */
