--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "mainPart/base.html" %}
-{% block title %}Upload File{% endblock %}
+{% block title %}Homepage{% endblock %}
 {% block content %}
     <br>
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr);">
