--- a/app/templates/mainPart/generate_schedule.html
+++ b/app/templates/mainPart/generate_schedule.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "mainPart/base.html" %}
-{% block title %}Upload File{% endblock %}
+{% block title %}Automation{% endblock %}
 {% block content %}
     <div class="menu-grid">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
