--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -6,12 +6,12 @@ body {
 
 form {
     width: 90%;
-    padding: 50px;
+    padding: 20px;
     /* border: 2px solid #ccc; */
     /* border-radius: 10px; */
     background: #fff;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
-    margin: 2%;
+    margin-top: 3%;
 }
 
 /* Heading frame layout */
@@ -19,6 +19,7 @@ form {
     display: flex;
     justify-content: space-between;
     width: 95%;
+    margin-top: 1%;
 }
 
 /* INTI logo layout */
