--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -5,12 +5,12 @@ body {
 }
 
 form {
-    width: 90%;
+    width: 93%;
     padding: 20px;
-    /* border: 2px solid #ccc; */
-    /* border-radius: 10px; */
+    border: 2px solid #ccc;
+    border-radius: 10px;
     background: #fff;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     margin-top: 3%;
 }
 
