--- a/app/templates/mainPart/upload.html
+++ b/app/templates/mainPart/upload.html
@@ -14,4 +14,8 @@
                data-tab="uploadExamDetails">Exam Details</a>
         </div>
     </div>
+
+    <!-- 
+    Show all the upload file by category like the main dashboard
+    -->
 {% endblock %}
