--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -22,7 +22,7 @@
     <form method="POST">
         <!-- Dynamic tab navigation -->
         <div class="tab-nav">
-            <a href="{{ url_for('home_page')}}" 
+            <a href="{{ url_for('homepage')}}" 
                class="tab-link {% if active_tab == 'home' %}active{% endif %}" 
                data-tab="home">Home</a>
 
