--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -7,7 +7,7 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
-            <a href="{{ url_for('upload)}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+            <a href="{{ url_for('upload')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>    
