--- a/app/templates/mainPart/uploadLecturerTimetable.html
+++ b/app/templates/mainPart/uploadLecturerTimetable.html
@@ -3,9 +3,12 @@
 {% block title %}UploadTimetable{% endblock %}
 {% block content %}
     <div class="menu-grid">
-
         <!-- Dynamic tab navigation -->
         <div class="tab-nav">
+            <a href="{{ url_for('upload')}}" 
+               class="tab-link {% if active_tab == 'upload' %}active{% endif %}" 
+               data-tab="upload">Lecturers Timetable</a>
+
             <a href="{{ url_for('upload_lecturer_timetable')}}" 
                class="tab-link {% if active_tab == 'uploadLecturerTimetable' %}active{% endif %}" 
                data-tab="uploadLecturerTimetable">Lecturers Timetable</a>
