--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -24,7 +24,7 @@
             <div class="big-frame">
                 <label>Upload Masterfile</label>
                 <div class="small-frame">
-                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls" required>
+                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
                 <button type="submit">Upload and Process</button>
             </div>
