--- a/app/templates/mainPart/upload.html
+++ b/app/templates/mainPart/upload.html
@@ -18,6 +18,7 @@
                data-tab="uploadExamDetails">Exam Details</a>
         </div>
     </div>
+    {{user_id}}
 
     <!-- 
     Show all the upload file by category like the main dashboard
