--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "mainPart/baseUpload.html" %}
+{% extends "mainPart/base.html" %}
 {% block title %}UploadExam{% endblock %}
 {% block content %}
     <!-- Row 1 First Fesatures to upload merge schedule files--> 
