--- a/app/templates/mainPart/uploadLecturerTimetable.html
+++ b/app/templates/mainPart/uploadLecturerTimetable.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "mainPart/baseUpload.html" %}
+{% extends "mainPart/base.html" %}
 {% block title %}UploadTimetable{% endblock %}
 {% block content %}
 
