--- a/app/templates/mainPart/uploadLecturerTimetable.html
+++ b/app/templates/mainPart/uploadLecturerTimetable.html
@@ -3,24 +3,28 @@
 {% block title %}UploadTimetable{% endblock %}
 {% block content %}
 
-    <div class="menu-section">
-        <h2>Upload File</h2>
-        <div class="big-frame">
-            <label>Upload Masterfile</label>
-            <div class="small-frame">
-                <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
-            </div>
-            <button type="submit">Upload and Process</button>
-        </div>
-    </div>
+    <div class="menu-grid">
+        <div class="menu-section">
 
-    <div class="menu-section">
-        <h2>Table Record</h2>
-        <tr>
-            <th>a</th>
-            <th>b</th>
-            <th>c</th>
-        </tr>
-        
+            <h2>Upload File</h2>
+            <div class="big-frame">
+                <label>Upload Masterfile</label>
+                <div class="small-frame">
+                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                </div>
+                <button type="submit">Upload and Process</button>
+            </div>
+
+            <div class="menu-section">
+                <h2>Table Record</h2>
+                <tr>
+                    <th>a</th>
+                    <th>b</th>
+                    <th>c</th>
+                </tr>
+            </div>
+        </div>  
     </div>
+    
+    
 {% endblock %}
