--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -88,7 +88,7 @@ form {
 /* Title with the layout of each frame */
 .menu-section h2 {
     color: #2c3e50;
-    border-bottom: 2px solid #3498db;
+    /* border-bottom: 2px solid #3498db;*/
     padding-bottom: 10px;
     margin-top: 0;
 }
