--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -6,9 +6,8 @@
     <div class="menu-grid">
 
         <div class="menu-section">
-            <h2>Upload File</h2>
             <div class="big-frame">
-                <label>Upload Masterfile</label>
+                <h2>Upload Masterfile</h2>
                 <div class="small-frame">
                     <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
