--- a/app/templates/mainPart/uploadLecturerTimetable.html
+++ b/app/templates/mainPart/uploadLecturerTimetable.html
@@ -5,10 +5,8 @@
 
     <div class="menu-grid">
         <div class="menu-section">
-
-            <h2>Upload File</h2>
             <div class="big-frame">
-                <label>Upload Masterfile</label>
+                <h2>Upload ExamFile</h2>
                 <div class="small-frame">
                     <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
