--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -7,11 +7,11 @@
 
         <div class="menu-section">
             <div class="big-frame">
-                <h2>Upload Masterfile</h2>
+                <h2>Upload ExamFile</h2>
                 <div class="small-frame">
                     <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
-                <button type="submit">Upload and Process</button>
+                <button type="submit">Upload</button>
             </div>
         </div>
 
