--- a/app/templates/mainPart/uploadLecturerTimetable.html
+++ b/app/templates/mainPart/uploadLecturerTimetable.html
@@ -15,24 +15,26 @@
 
             <div class="menu-section">
                 <h2>Table Record</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>ID</th>
-                            <th>Department</th>
-                            <th>Email</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>{{user_name}}</td>
-                            <td>{{user_id}}</td>
-                            <td>{{user_department}}</td>
-                            <td>{{user_email}}</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="user-table-container">
+                    <table class="user-data-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>ID</th>
+                                <th>Department</th>
+                                <th>Email</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>{{user_name}}</td>
+                                <td>{{user_id}}</td>
+                                <td>{{user_department}}</td>
+                                <td>{{user_email}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>  
     </div>
