--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -21,15 +21,15 @@
                 <table class="user-data-table">
                     <thead>
                         <tr>
-                            <th>Date</th>
-                            <th>Day</th>
-                            <th>Start</th>
-                            <th>End</th>
-                            <th>Course</th>
+                            <th>Exam Date</th>
+                            <th>Exam Day</th>
+                            <th>Exam Start Time</th>
+                            <th>Exam End Time</th>
+                            <th>Course Code</th>
                             <th>Section</th>
-                            <th>Lecturer</th>
-                            <th>No of </th>
-                            <th>Room</th>
+                            <th>Lecturer Name</th>
+                            <th>No of Students</th>
+                            <th>Venue</th>
                         </tr>
                     </thead>
                     <tbody>
